--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         #navbar {
             background-color: transparent;
             backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
         }
         #navbar.nav-scroll {
             background-color: white;
@@ -38,13 +39,13 @@
             font-weight: 500;
             transition: color 0.3s ease;
         }
-        .nav-link:hover,
-        .nav-link-mobile:hover {
-            color: #ff7f50;
-        }
         #navbar.nav-scroll .nav-link,
         #navbar.nav-scroll .nav-link-mobile {
             color: black;
+        }
+        .nav-link:hover,
+        .nav-link-mobile:hover {
+            color: #ff7f50;
         }
         .nav-link::after {
             content: '';
@@ -65,7 +66,7 @@
             transition: max-height 0.3s ease-out;
         }
         #mobile-menu.open {
-            max-height: 500px; /* Adjust based on your content height */
+            max-height: 500px; /* Adjust based on content height */
             transition: max-height 0.5s ease-in;
         }
         .nav-link-mobile {
@@ -77,6 +78,52 @@
             opacity: 1;
             transform: translateY(0);
             transition-delay: 0.2s;
+        }
+
+        /* Hamburger Icon Visibility Fix */
+        #menu-toggle svg {
+            stroke: #333; /* Default color for visibility */
+        }
+        #menu-toggle.open svg {
+            transform: rotate(180deg);
+        }
+        #menu-toggle.open svg path {
+            d: path("M4 4L20 20M4 20L20 4");
+            transition: d 0.3s ease;
+            stroke: #333; /* Ensure visibility of "X" */
+        }
+
+        /* Responsive Navbar */
+        @media (max-width: 768px) {
+            #navbar .logo-text {
+                font-size: 1.5rem;
+            }
+            #navbar .nav-link {
+                font-size: 0.9rem;
+            }
+            /* Hamburger icon styles on scroll */
+            #navbar.nav-scroll #menu-toggle {
+                color: rgb(225, 116, 27);
+            }
+            #navbar #menu-toggle {
+                color: white;
+            }
+            /* Make sure mobile menu is always on top */
+            #mobile-menu {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+            }
+        }
+
+        @media (min-width: 769px) and (max-width: 1024px) {
+            #navbar .logo-text {
+                font-size: 1.8rem;
+            }
+            #navbar .nav-link {
+                font-size: 1rem;
+            }
         }
 
         /* Custom Scrollbar */
@@ -111,7 +158,6 @@
     </style>
 </head>
 <body class="font-sans text-gray-800">
-
     <!-- Navigation -->
     <nav class="fixed w-full z-50 transition-all duration-300" id="navbar">
         <div class="container mx-auto px-6 py-4 flex items-center justify-between">
@@ -120,7 +166,6 @@
                 <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/junk-removal-logo-junk-removal-services-icon-design-template-113e6dbca3b9794444bd7fc5a46e0817_screen.jpg?ts=1683623837" alt="Logo" class="h-12 w-12">
                 <span class="ml-3 text-2xl font-bold logo-text cursor-pointer">Junk<span class="text-orange-500">Experts</span></span>
             </div>
-
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8">
                 <a href="#home" class="nav-link relative group">Home</a>
@@ -130,22 +175,20 @@
                     Book Now
                 </a>
             </div>
-
             <!-- Mobile Menu Toggle Button -->
-            <button id="menu-toggle" class="md:hidden text-white focus:outline-none" aria-expanded="false">
-                <svg class="w-8 h-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <button id="menu-toggle" class="md:hidden focus:outline-none transition-transform duration-300" aria-expanded="false">
+                <svg class="w-8 h-8 transition-transform duration-300" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
                 </svg>
             </button>
         </div>
-
         <!-- Mobile Menu -->
-        <div id="mobile-menu" class="md:hidden bg-white shadow-lg">
+        <div id="mobile-menu" class="md:hidden bg-white shadow-lg w-full">
             <div class="container mx-auto px-6 py-4 space-y-4">
-                <a href="#home" class="block nav-link-mobile">Home</a>
-                <a href="#services" class="block nav-link-mobile">Services</a>
-                <a href="#about" class="block nav-link-mobile">About</a>
-                <a href="#contact" class="block bg-orange-500 text-white px-6 py-2 rounded-full hover:bg-orange-600 transition hover:shadow-lg hover-effect">
+                <a href="#home" class="block nav-link-mobile text-black">Home</a>
+                <a href="#services" class="block nav-link-mobile text-black">Services</a>
+                <a href="#about" class="block nav-link-mobile text-black">About</a>
+                <a href="#contact" class="block bg-orange-500 text-white px-6 py-2 rounded-full hover:bg-orange-600 transition hover:shadow-lg hover-effect text-center">
                     Book Now
                 </a>
             </div>
@@ -340,6 +383,7 @@
         </div>
     </footer>
 
+    <!-- Script Section -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         // Initialize AOS
@@ -358,41 +402,36 @@
             }
         });
 
-        // Mobile Menu Toggle Effect
+        // Enhanced Mobile Menu Toggle
         const menuToggle = document.getElementById('menu-toggle');
         const mobileMenu = document.getElementById('mobile-menu');
-
         menuToggle.addEventListener('click', function () {
+            this.classList.toggle('open');
             mobileMenu.classList.toggle('open');
-            menuToggle.classList.toggle('open');
-
-            // Update aria-expanded attribute
-            const isExpanded = menuToggle.getAttribute('aria-expanded') === 'true';
-            menuToggle.setAttribute('aria-expanded', !isExpanded);
-
-            // Close menu when clicking outside
-            if (mobileMenu.classList.contains('open')) {
-                document.addEventListener('click', closeMenuOnClickOutside);
-            } else {
-                document.removeEventListener('click', closeMenuOnClickOutside);
-            }
+            const expanded = menuToggle.getAttribute('aria-expanded') === 'true' || false;
+            menuToggle.setAttribute('aria-expanded', !expanded);
         });
 
-        function closeMenuOnClickOutside(e) {
+        // Close mobile menu when clicking outside
+        document.addEventListener('click', function (e) {
             if (!mobileMenu.contains(e.target) && !menuToggle.contains(e.target)) {
                 mobileMenu.classList.remove('open');
                 menuToggle.classList.remove('open');
                 menuToggle.setAttribute('aria-expanded', 'false');
-                document.removeEventListener('click', closeMenuOnClickOutside);
             }
-        }
+        });
 
-        // Close menu when clicking links
+        // Smooth scroll for mobile links
         document.querySelectorAll('.nav-link-mobile').forEach(link => {
-            link.addEventListener('click', () => {
+            link.addEventListener('click', (e) => {
+                e.preventDefault();
+                const target = document.querySelector(link.getAttribute('href'));
                 mobileMenu.classList.remove('open');
                 menuToggle.classList.remove('open');
-                menuToggle.setAttribute('aria-expanded', 'false');
+                target.scrollIntoView({
+                    behavior: 'smooth',
+                    block: 'start'
+                });
             });
         });
     </script>
