--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         /* Hamburger Icon Visibility Fix */
         #menu-toggle svg {
-            stroke: #333; /* Default color for visibility */
+            stroke: #e2a712; /* Default color for visibility */
         }
         #menu-toggle.open svg {
             transform: rotate(180deg);
@@ -90,7 +90,7 @@
         #menu-toggle.open svg path {
             d: path("M4 4L20 20M4 20L20 4");
             transition: d 0.3s ease;
-            stroke: #333; /* Ensure visibility of "X" */
+            stroke: rgb(225, 116, 27); /* Ensure visibility of "X" */
         }
 
         /* Responsive Navbar */
